--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a data-w-id="5b0d967b-ba35-3e86-5852-f8aa9db3dc79" href="https://t.me/GetTrumpMemes_HQ?start" class="telegram w-inline-block">
                             <img src="tg.png" loading="lazy" width="65" alt="Telegram"/>
                         </a>
-                        <a href="https://raydium.io/swap" class="buy-now w-inline-block">
+                        <a href="" class="buy-now w-inline-block">
                             <img src="buy.png" loading="lazy" width="125" data-w-id="257e5ea3-2b42-af83-bd92-39e9224b693a" alt="Buy Now" class="buy-button"/>
                         </a>
                     </div>
